--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
  "routes":[
     {
       "src": "/api/(.*)",
-      "dest": "BackEnd-ecommerce/Index.js"
+      "dest": "BackEnd-ecommerce/api"
     },
     {
       "src": "/",
