--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,5 @@
       "use": "@vercel/static"
     }
   ],
- {
-  "rewrites": [{ "source": "/(.*)", "destination": "BackEnd-ecommerce/Index.js" }]
-}
+  "rewrites": [{ "source": "/api/(.*)", "destination": "BackEnd-ecommerce/api" }]
 }
