--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,5 @@
       "use": "@vercel/static"
     }
   ],
-  "rewrites": [{ "source": "/api/(.*)", "destination": "BackEnd-ecommerce/Index.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "BackEnd-ecommerce/Index.js" }]
 }
