--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,7 @@
       "use": "@vercel/static"
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "BackEnd-ecommerce/Index.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "BackEnd-ecommerce/Index.js" }, 
+  {"source": "/api/(.*)", "destination": "BackEnd-ecommerce/Index.js"}
+  ]
 }
